--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ rsconnect/
 
 # Rendered pdf files of assignments
 assignments/**/*.pdf
+
+# Rendered Quarto files
+scripts/**/*.pdf
+scripts/**/*.html
+**/*_files/
