reflecting quarto branch to avoid merge conflict

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ rsconnect/
 
 # Rendered pdf files of assignments
 assignments/**/*.pdf
+
+# Rendered Quarto files
+scripts/**/*.pdf
+scripts/**/*.html
