--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ rsconnect/
 
 # Rendered pdf files of assignments
 assignments/**/*.pdf
+assignments/**/*.html
 
 # Rendered Quarto files
 scripts/**/*.pdf
