inital commit - moving from nyc marathon data to knight-newhouse data

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ rsconnect/
 
 # Rendered pdf files of assignments
 assignments/**/*.pdf
+assignments/**/*.html
+
+# Rendered Quarto files
+scripts/**/*.pdf
+scripts/**/*.html
