--- a/assignments/data_wrangling/_publish.yml
+++ b/assignments/data_wrangling/_publish.yml
@@ -2,3 +2,7 @@
   quarto-pub:
     - id: 109ed646-7517-46f5-8332-482b03d26f21
       url: 'https://nicholasbellphd.quarto.pub/assignment-3'
+- source: data_wrangling_answerkey.qmd
+  quarto-pub:
+    - id: 846aeaa1-981a-4252-acea-a31bacf5b0c0
+      url: 'https://nicholasbellphd.quarto.pub/assignment-3-answerkey'
