selection bias exercise

--- a/.gitignore
+++ b/.gitignore
@@ -48,10 +48,6 @@ po/*~
 # RStudio Connect folder
 rsconnect/
 
-# Rendered pdf files of assignments
-assignments/**/*.pdf
-assignments/**/*.html
-
-# Rendered Quarto files
-scripts/**/*.pdf
-scripts/**/*.html
+# Rendered markdown and Quarto files
+*.pdf
+*.html
